// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsHandler img url case 1`] = `
"data: {
  classNames: "bg-_url_qhttpscssylnavdcomsassetssimagessvusdivider-graydwebpq__";
}"
`;

exports[`jsHandler mpx jit classNames 1`] = `
"data: {
  classNames: "text-_h123456_ text-_50px_ bg-_hfff_";
}"
`;
